fix(add-graph): fixed table overflow x

--- a/src/app/graph/add-graph/add-graph.component.scss
+++ b/src/app/graph/add-graph/add-graph.component.scss
@@ -65,11 +65,6 @@
   gap: 2rem;
 }
 
-.data-table {
-  width: 100%;
-  overflow-x: scroll;
-}
-
 .form-container {
   display: flex;
   align-items: center;
@@ -81,4 +76,8 @@
   display: flex;
   gap: 1rem;
   align-self: flex-end;
+}
+.table-container {
+  width: 100%;
+  overflow-x: scroll;
 }
